--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.7",
+    "@clerk/nextjs": "^5.1.2",
     "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.4.2",
     "@million/lint": "^1.0.0-rc.0",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,49 +26,49 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@stripe/stripe-js": "^3.4.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@stripe/stripe-js": "^3.4.1",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.3",
-    "@tabler/icons-react": "^2.46.0",
-    "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-query-devtools": "^5.13.3",
-    "@tremor/react": "^3.16.2",
-    "@trpc/client": "^10.44.1",
-    "@trpc/next": "^10.44.1",
-    "@trpc/react-query": "^10.44.1",
-    "@trpc/server": "^10.44.1",
+    "@supabase/supabase-js": "^2.43.4",
+    "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^5.39.0",
+    "@tremor/react": "^3.17.2",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "@types/react-html-parser": "^2.0.6",
     "@upstash/ratelimit": "^0.4.4",
-    "@upstash/redis": "^1.24.2",
-    "@vercel/analytics": "^1.2.2",
-    "axios": "^1.6.8",
+    "@upstash/redis": "^1.31.2",
+    "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "encoding": "^0.1.13",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.6",
     "geist": "^1.3.0",
     "lucide-react": "^0.279.0",
-    "million": "^3.1.0",
+    "million": "^3.1.6",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.1.4",
+    "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
-    "prisma": "^5.9.1",
-    "react": "latest",
+    "prisma": "^5.14.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "^8.10.1",
     "react-dom": "latest",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.5",
     "react-html-parser": "^2.0.2",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "recharts": "^2.12.7",
     "sonner": "^1.4.41",
-    "stripe": "^14.16.0",
-    "svix": "^1.13.0",
+    "stripe": "^14.25.0",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -78,7 +78,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "latest"
   }
 }
